install-dir/manifests/haproxy.yaml
kind: Pod
apiVersion: v1
metadata:
  name: haproxy
  namespace: openshift-kni-infra
  creationTimestamp:
  deletionGracePeriodSeconds: 65
  labels:
    app: kni-infra-api-lb
spec:
  volumes:
  - name: resource-dir
    hostPath:
      path: "/etc/kubernetes/static-pod-resources/haproxy"
  - name: kubeconfigvarlib
    hostPath:
      path: "/var/lib/kubelet"
  - name: run-dir
    empty-dir: {}
  - name: conf-dir
    hostPath:
      path: "/etc/haproxy"
  - name: chroot-host
    hostPath:
      path: "/"
  containers:
  - name: haproxy
    image: quay.io/openshift-release-dev/ocp-v4.0-art-dev@sha256:3496c77d7281fd4854732c9b8a0eb09283a162ce0a4b8a3c96ba51184049f0be
    command:
    - "/bin/bash"
    - "-c"
    - |
      [...]
    resources:
      requests:
        cpu: 100m
        memory: 200Mi
    volumeMounts:
    - name: conf-dir
      mountPath: "/etc/haproxy"
    - name: run-dir
      mountPath: "/var/run/haproxy"
    livenessProbe:
      initialDelaySeconds: 50
      httpGet:
        path: /haproxy_ready
        port: 50936
    terminationMessagePolicy: FallbackToLogsOnError
    imagePullPolicy: IfNotPresent
  - name: haproxy-monitor
    securityContext:
      privileged: true
    image: quay.io/openshift-release-dev/ocp-v4.0-art-dev@sha256:3899b8fba1ab11d5cbff5581ca3bc7c06ba47eece58588cd53f93ead60e8ea4c
    command:
      - "/bin/bash"
      - "-c"
      - |            
        cp /host/etc/resolv.conf /etc/resolv.conf
        monitor /var/lib/kubelet/kubeconfig  /config/haproxy.cfg.tmpl  /etc/haproxy/haproxy.cfg  --api-vip 192.168.20.110
    resources:
      requests:
        cpu: 100m
        memory: 200Mi          
    volumeMounts:
    - name: conf-dir
      mountPath: "/etc/haproxy"
    - name: run-dir
      mountPath: "/var/run/haproxy"
    - name: resource-dir
      mountPath: "/config"
    - name: chroot-host
      mountPath: "/host"
    - name: kubeconfigvarlib
      mountPath: "/var/lib/kubelet"
    livenessProbe:
      initialDelaySeconds: 10
      exec:
        command:
          - /bin/bash
          - -c
          - |
            cmp /host/etc/resolv.conf /etc/resolv.conf
    terminationMessagePolicy: FallbackToLogsOnError
    imagePullPolicy: IfNotPresent
  hostNetwork: true
  tolerations:
  - operator: Exists
  priorityClassName: system-node-critical
status: {}
